[package]
name = "online-swarm-monitor"
version = "0.1.0"
authors = ["Maxim Shishmarev <msgmaxim@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10", features = ["json"] }
serde_json = "*"
serde = { version = "1.0", features = ["derive"]}
clap = "*"